// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Board It should fetch items. 1`] = `
<div>
  <div class="board-wrapper">
    <div class="board">
      <div class="board-header"><span class="board-title">MockTitleForTest</span></div>
      <div class="list-section-wrapper">
        <div class="list-section">
          <div class="list-wrapper">
            <list-stub data="[object Object]"></list-stub>
          </div>
          <div class="list-wrapper">
            <list-stub data="[object Object]"></list-stub>
          </div>
          <div class="list-wrapper">
            <list-stub data="[object Object]"></list-stub>
          </div>
        </div>
      </div>
    </div>
  </div>
  <router-view-stub></router-view-stub>
</div>
`;

exports[`Board renders main child components 1`] = `
<div>
  <div class="board-wrapper">
    <div class="board">
      <div class="board-header"><span class="board-title">MockTitleForTest</span></div>
      <div class="list-section-wrapper">
        <div class="list-section">
          <div class="list-wrapper">
            <div class="list">
              <div class="list-header">
                <div class="list-header-title">Todo</div>
              </div>
              <div data-list-id="1" class="card-list"></div>
              <div><a class="add-card-btn">
                  + Add a card...
                </a></div>
            </div>
          </div>
          <div class="list-wrapper">
            <div class="list">
              <div class="list-header">
                <div class="list-header-title">Doing</div>
              </div>
              <div data-list-id="2" class="card-list"></div>
              <div><a class="add-card-btn">
                  + Add a card...
                </a></div>
            </div>
          </div>
          <div class="list-wrapper">
            <div class="list">
              <div class="list-header">
                <div class="list-header-title">Done</div>
              </div>
              <div data-list-id="3" class="card-list"></div>
              <div><a class="add-card-btn">
                  + Add a card...
                </a></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <router-view-stub></router-view-stub>
</div>
`;
